--- a/tutorials/klusterai-api/get-started-all-in-one-batch-api.ipynb
+++ b/tutorials/klusterai-api/get-started-all-in-one-batch-api.ipynb
@@ -7,7 +7,7 @@
     "id": "be189fde-4e5b-4f80-bae1-ded86a5075a7"
    },
    "source": [
-    "# Quick start notebook: Batch Predictions with **kluster.ai**"
+    "# Quick start: Multiple Batch Predictions with kluster.ai"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "id": "b17a77d9",
    "metadata": {},
    "source": [
-    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/kluster-ai/klusterai-cookbook/blob/main/Quick_start_notebook.ipynb)"
+    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/kluster-ai/klusterai-cookbook/blob/main/get-started-all-in-one-batch-api.ipynb)"
    ]
   },
   {
