--- a/tutorials/klusterai-api/get-started-all-in-one-batch-api.ipynb
+++ b/tutorials/klusterai-api/get-started-all-in-one-batch-api.ipynb
@@ -7,7 +7,7 @@
     "id": "be189fde-4e5b-4f80-bae1-ded86a5075a7"
    },
    "source": [
-    "# Quick start: Multiple Batch Predictions with kluster.ai"
+    "# Quick Start: Multiple Batch Predictions with kluster.ai"
    ]
   },
   {
