Resolve notebook crash due to hyperlink in markdown cell

--- a/tutorials/klusterai-api/get-started-all-in-one-batch-api.ipynb
+++ b/tutorials/klusterai-api/get-started-all-in-one-batch-api.ipynb
@@ -25,12 +25,11 @@
     "id": "6d1d06ea-79c1-4f28-b312-0e5aabe18ff3"
    },
    "source": [
-    "This tutorial runs through a Colab Notebook where you’ll learn how to use the <a href="https://kluster.ai/" target="\_blank">kluster.ai</a> batch inference service to extract insights from large volumes of text data. By the end of this guide, you'll be able to summarize a dataset, generate keywords, translate text to another language (in this case, English to Spanish), classify the text, and extract the relevant keywords* all without writing a single line of code. Whether you’re familiar with LLMs or just getting started, this guide is designed to get you up and running in minutes.\n",
+    "This tutorial runs through a Colab Notebook where you'll learn how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> batch inference service to extract insights from large volumes of text data. By the end of this guide, you'll be able to summarize a dataset, generate keywords, translate text to another language (in this case, English to Spanish), classify the text, and extract the relevant keywords* all without writing a single line of code. Whether you're familiar with LLMs or just getting started, this guide is designed to get you up and running in minutes.\n",
     "\n",
     "In this guide, you'll follow just a few simple steps:\n",
     "\n",
-    "1.\t**Enter your API Key:** the only required input. This allows access to kluster.ai API for generating predictions. If you don't have one, sign up <a href="https://platform.kluster.ai/signup" target="\_blank">in our platform</a>
-, and you'll get one for free\n",
+    "1.\t**Enter your API Key:** the only required input. This allows access to kluster.ai API for generating predictions. If you don't have one, sign up <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">in our platform</a>, and you'll get one for free\n",
     "2.\t**Select a Dataset:** we offer three different datasets. You can select one from the provided options to get started, but feel free to bring your own dataset.\n",
     "3.\t**Run Configurations and Predictions:** all configuration settings are already defined. After selecting the dataset, you can proceed by simply running the provided cells, which will handle all configurations and execute batch predictions for you\n",
     "\n",
