Apply suggestions from code review
Accept all sugestions

Co-authored-by: albertov19 <64150856+albertov19@users.noreply.github.com>

--- a/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
+++ b/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
@@ -73,7 +73,7 @@
     "id": "xU1WBQJ7Uh09"
    },
    "source": [
-    "## Config"
+    "## Configuration"
    ]
   },
   {
@@ -186,7 +186,7 @@
     "id": "udPtLfTaisSw"
    },
    "source": [
-    "## Fetch the data"
+    "## Fetch the Data"
    ]
   },
   {
@@ -561,7 +561,7 @@
     "id": "w-Lux3oUjfYI"
    },
    "source": [
-    "## Define the tasks"
+    "## Define the Tasks"
    ]
   },
   {
@@ -795,7 +795,7 @@
     "id": "e-ujphILqepu"
    },
    "source": [
-    "### Check Job progress"
+    "### Check Job Progress"
    ]
   },
   {
@@ -927,7 +927,7 @@
     "id": "TkkhIG9HU0D9"
    },
    "source": [
-    "## Get the results"
+    "## Get the Results"
    ]
   },
   {
