--- a/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
+++ b/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
@@ -44,7 +44,7 @@
     "id": "kLjuYx2NzXe6"
    },
    "source": [
-    "### Table of contents\n",
+    "### Table of Contents\n",
     "\n",
     ">>[Config](#scrollTo=xU1WBQJ7Uh09)\n",
     "\n",
