fix: papermoonio repo URL, python version warning

--- a/.CONTRIBUTING.md
+++ b/.CONTRIBUTING.md
@@ -45,7 +45,7 @@ To set up the structure, follow these steps:
 1. Clone this repository:
 
     ```bash
-    git clone https://github.com/papermoonio/kluster.ai-mkdocs
+    git clone https://github.com/papermoonio/kluster-mkdocs
     ```
 
 2. Inside the folder just created, clone the `docs` repository:
@@ -56,6 +56,8 @@ To set up the structure, follow these steps:
     ```
 
 ### Install Dependencies and Serve Site
+
+Python 3.13 is not compatible with the current dependencies. Python 3.11 has been tested and confirmed working.
 
 1. Now that the repositories are cloned and properly nested, use the [pip](https://pypi.org/project/pip/) package installer to install [mkdocs](https://www.mkdocs.org/) and other required dependencies by running the command:
 
