Python code samples first & specify openai version  (#11)
* fix: papermoonio repo URL, python version warning

* reorder code so python is first

* specify at least openai version 1.0.0 is needed

* make python samples runnable

* ensure jsonl writing is shown without scroll

* fix: Other URLs. And format python warning message

* Re-arrange OpenAI installation code. Use capital letters for POST

---------

Co-authored-by: joaq-rod <rodriguez.olsavsky@gmail.com>

--- a/.CONTRIBUTING.md
+++ b/.CONTRIBUTING.md
@@ -27,16 +27,16 @@ You may want to spin up a local version of the documentation site to preview you
 
 Building and serving the site requires cloning two repositories:
 
-- **[kluster.ai MkDocs](https://github.com/papermoonio/kluster.ai-docs)** - contains the MkDocs config files, theme overrides, and custom CSS for the kluster.ai documentation site
+- **[kluster.ai MkDocs](https://github.com/papermoonio/kluster-mkdocs)** - contains the MkDocs config files, theme overrides, and custom CSS for the kluster.ai documentation site
 
 - **[Kluster.ai Docs](https://github.com/kluster-ai/docs)** - the actual content is stored in the docs repo and pulled into the docs directory during build
 
 For everything to work correctly, the file structure needs to be as follows:
 
-```bash
-kluster.ai-mkdocs
+```text
+kluster-mkdocs
 |--- /material-overrides/ (folder)
-|--- /docs/ (repository)
+|--- /kluster-docs/ (folder)
 |--- mkdocs.yml
 ```
 
@@ -45,14 +45,14 @@ To set up the structure, follow these steps:
 1. Clone this repository:
 
     ```bash
-    git clone https://github.com/papermoonio/kluster.ai-mkdocs
+    git clone https://github.com/papermoonio/kluster-mkdocs
     ```
 
-2. Inside the folder just created, clone the `docs` repository:
+2. Inside the folder just created, clone the [docs repository](https://github.com/kluster-ai/docs), **note that we force the output to be kluster-docs**:
 
     ```bash
-    cd kluster.ai-mkdocs
-    git clone https://github.com/kluster-ai/docs
+    cd kluster-mkdocs
+    git clone https://github.com/kluster-ai/docs kluster-docs
     ```
 
 ### Install Dependencies and Serve Site
@@ -65,13 +65,16 @@ To set up the structure, follow these steps:
 
     This command will install all dependencies listed in the `requirements.txt` file.
 
+> [!WARNING]
+> Python 3.13 is not compatible with the current dependencies. Python 3.11 has been tested and confirmed working.
+
 2. In the kluster.ai-mkdocs folder (which should be the current one), you can build the site by running:
 
     ```bash
     mkdocs serve
     ```
 
-After a successful build, the site should be available at http://127.0.0.1:8000.
+After a successful build, the site should be available at `http://127.0.0.1:8000`.
 
 ## Adding New Pages
 
