Addressed all of Alberto's comments

--- a/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
+++ b/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
@@ -527,6 +527,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ca918c23",
+   "metadata": {},
+   "source": [
+    "All requests are now being processed!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e-ujphILqepu",
    "metadata": {
     "id": "e-ujphILqepu"
@@ -542,7 +550,7 @@
     "id": "iFrDrriQqizC"
    },
    "source": [
-    "All requests are now being processed! In the following section, we’ll monitor the status of each job to see how they’re progressing. Let’s take a look and keep track of their completion."
+    "In the following section, we’ll monitor the status of each job to see how they’re progressing. Let’s take a look and keep track of their completion."
    ]
   },
   {
