--- a/tutorials/klusterai-api/sentiment-analysis-api.ipynb
+++ b/tutorials/klusterai-api/sentiment-analysis-api.ipynb
@@ -339,6 +339,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "406e7a44",
+   "metadata": {},
+   "source": [
+    "All requests are currently being processed!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e-ujphILqepu",
    "metadata": {
     "id": "e-ujphILqepu"
@@ -354,7 +362,7 @@
     "id": "iFrDrriQqizC"
    },
    "source": [
-    "All requests are currently being processed! In the next section, we’ll track the status of the job to monitor its progress. Let’s check in and follow its completion."
+    "In the next section, we’ll track the status of the job to monitor its progress. Let’s check in and follow its completion."
    ]
   },
   {
