--- a/tutorials/klusterai-api/text-classification-api.ipynb
+++ b/tutorials/klusterai-api/text-classification-api.ipynb
@@ -175,9 +175,9 @@
    },
    "source": [
     "To execute the inference job, we’ll follow three straightforward steps:\n",
-    "1. Create the inference file: We’ll generate a file with the desired requests to be processed by the model.\n",
-    "2. Upload the inference file: Once the file is ready, we’ll upload it to the kluster.ai platform using the API, where it will be queued for processing.\n",
-    "3. Start the job: After the file is uploaded, we’ll initiate the job to process the uploaded data.\n",
+    "1. **Create the inference file -** we’ll generate a file with the desired requests to be processed by the model.\n",
+    "2. **Upload the inference file -** once the file is ready, we’ll upload it to the kluster.ai platform using the API, where it will be queued for processing.\n",
+    "3. **Start the job -** after the file is uploaded, we’ll initiate the job to process the uploaded data.\n",
     "\n",
     "Everything is set up for you – just run the cells below to watch it all come together!"
    ]
@@ -322,9 +322,7 @@
    "id": "251a0b89-71a9-40d7-bf14-51be935afe10",
    "metadata": {},
    "source": [
-    "Once the file has been successfully uploaded, we’re ready to start the inference job.\n",
-    "\n",
-    "**REMEMBER:** The time to complete an inference job can take up to 24 hours. Although, it typically completes in much less time."
+    "Once the file has been successfully uploaded, we’re ready to start the inference job."
    ]
   },
   {
