Removed response_format from several notebooks since it is not supported

--- a/tutorials/klusterai-api/keyword-extraction-api.ipynb
+++ b/tutorials/klusterai-api/keyword-extraction-api.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fVtwyqZ_nEq7",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,6 @@
     "            \"body\": {\n",
     "                \"model\": \"klusterai/Meta-Llama-3.3-70B-Instruct-Turbo\",\n",
     "                \"temperature\": 0.5,\n",
-    "                \"response_format\": {\"type\": \"json_object\"},\n",
     "                \"messages\": [\n",
     "                    {\"role\": \"system\", \"content\": 'Extract up to 5 relevant keywords from the given text. Provide only the keywords between double quotes and separated by commas.'},\n",
     "                    {\"role\": \"user\", \"content\": content}\n",
@@ -268,7 +267,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"custom_id\": \"keyword_extraction-0\", \"method\": \"POST\", \"url\": \"/v1/chat/completions\", \"body\": {\"model\": \"klusterai/Meta-Llama-3.3-70B-Instruct-Turbo\", \"temperature\": 0.5, \"response_format\": {\"type\": \"json_object\"}, \"messages\": [{\"role\": \"system\", \"content\": \"Extract up to 5 relevant keywords from the given text. Provide only the keywords between double quotes and separated by commas.\"}, {\"role\": \"user\", \"content\": \"Chorus Frog Found Croaking in Virginia - The Southern chorus frog has been found in southeastern Virginia, far outside its previously known range. The animal had never before been reported north of Beaufort County, N.C., about 125 miles to the south.\"}]}}\n"
+      "{\"custom_id\": \"keyword_extraction-0\", \"method\": \"POST\", \"url\": \"/v1/chat/completions\", \"body\": {\"model\": \"klusterai/Meta-Llama-3.3-70B-Instruct-Turbo\", \"temperature\": 0.5, \"messages\": [{\"role\": \"system\", \"content\": \"Extract up to 5 relevant keywords from the given text. Provide only the keywords between double quotes and separated by commas.\"}, {\"role\": \"user\", \"content\": \"Chorus Frog Found Croaking in Virginia - The Southern chorus frog has been found in southeastern Virginia, far outside its previously known range. The animal had never before been reported north of Beaufort County, N.C., about 125 miles to the south.\"}]}}\n"
      ]
     }
    ],
