--- a/tutorials/klusterai-api/sentiment-analysis-api.ipynb
+++ b/tutorials/klusterai-api/sentiment-analysis-api.ipynb
@@ -219,7 +219,6 @@
     "            \"body\": {\n",
     "                \"model\": \"klusterai/Meta-Llama-3.3-70B-Instruct-Turbo\",\n",
     "                \"temperature\": 0.5,\n",
-    "                \"response_format\": {\"type\": \"json_object\"},\n",
     "                \"messages\": [\n",
     "                    {\"role\": \"system\", \"content\": 'Analyze the sentiment of this text and respond with one word: positive, negative, or neutral.'},\n",
     "                    {\"role\": \"user\", \"content\": content}\n",
@@ -266,7 +265,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"custom_id\": \"sentiment-analysis-0\", \"method\": \"POST\", \"url\": \"/v1/chat/completions\", \"body\": {\"model\": \"klusterai/Meta-Llama-3.3-70B-Instruct-Turbo\", \"temperature\": 0.5, \"response_format\": {\"type\": \"json_object\"}, \"messages\": [{\"role\": \"system\", \"content\": \"Analyze the sentiment of this text and respond with one word: positive, negative, or neutral.\"}, {\"role\": \"user\", \"content\": \"It hums, crackles, and I think I'm having problems with my equipment. As soon as I use any of my other cords then the problem is gone. Hosa makes some other products that have good value. But based on my experience I don't recommend this one.\"}]}}\n"
+      "{\"custom_id\": \"sentiment-analysis-0\", \"method\": \"POST\", \"url\": \"/v1/chat/completions\", \"body\": {\"model\": \"klusterai/Meta-Llama-3.3-70B-Instruct-Turbo\", \"temperature\": 0.5, \"messages\": [{\"role\": \"system\", \"content\": \"Analyze the sentiment of this text and respond with one word: positive, negative, or neutral.\"}, {\"role\": \"user\", \"content\": \"It hums, crackles, and I think I'm having problems with my equipment. As soon as I use any of my other cords then the problem is gone. Hosa makes some other products that have good value. But based on my experience I don't recommend this one.\"}]}}\n"
      ]
     }
    ],
