update kluster.ai styling

--- a/.CONTRIBUTING.md
+++ b/.CONTRIBUTING.md
@@ -27,9 +27,9 @@ You may want to spin up a local version of the documentation site to preview you
 
 Building and serving the site requires cloning two repositories:
 
-- **[kluster.ai MkDocs](https://github.com/papermoonio/kluster-mkdocs)** - contains the MkDocs config files, theme overrides, and custom CSS for the kluster.ai documentation site
+- **[kluster.ai MkDocs](https://github.com/papermoonio/kluster-mkdocs)** - contains the MkDocs config files, theme overrides, and custom CSS for the [kluster.ai](https://www.kluster.ai/) documentation site
 
-- **[Kluster.ai Docs](https://github.com/kluster-ai/docs)** - the actual content is stored in the docs repo and pulled into the docs directory during build
+- **[kluster.ai docs](https://github.com/kluster-ai/docs)** - the actual content is stored in the docs repo and pulled into the docs directory during build
 
 For everything to work correctly, the file structure needs to be as follows:
 
@@ -68,7 +68,7 @@ To set up the structure, follow these steps:
 > [!WARNING]
 > Python 3.13 is not compatible with the current dependencies. Python 3.11 has been tested and confirmed working.
 
-2. In the kluster.ai-mkdocs folder (which should be the current one), you can build the site by running:
+2. In the `kluster-mkdocs` folder (which should be the current one), you can build the site by running:
 
     ```bash
     mkdocs serve
