update kluster.ai styling in notebooks

--- a/tutorials/klusterai-api/llm-as-a-judge.ipynb
+++ b/tutorials/klusterai-api/llm-as-a-judge.ipynb
@@ -50,11 +50,11 @@
     "## 1. Setting up your environment\n",
     "\n",
     "### API key configuration\n",
-    "To get started with this tutorial, you'll need a kluster.ai API key. If you don't have one yet, follow these steps:\n",
-    "1. Visit the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai</a> to create an account.\n",
+    "To get started with this tutorial, you'll need a **kluster.ai** API key. If you don't have one yet, follow these steps:\n",
+    "1. Visit the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> to create an account.\n",
     "2. Generate your API key\n",
     "\n",
-    "Once you have your API key, we'll use it to authenticate our requests to the kluster.ai API.\n",
+    "Once you have your API key, we'll use it to authenticate our requests to the **kluster.ai** API.\n",
     "\n",
     "##### **Important note:** keep your API key secure and never share it publicly. In this notebook, we'll use Python's getpass module to safely input the key."
    ]
@@ -144,7 +144,7 @@
     "#### Understanding the helper functions\n",
     "In this section, we'll create several utility functions that will help us:\n",
     "1. Prepare our data for batch processing\n",
-    "2. Send requests to the kluster.ai API\n",
+    "2. Send requests to the **kluster.ai** API\n",
     "3. Monitor the progress of our evaluation\n",
     "4. Collect and analyze results\n",
     "\n",
@@ -222,7 +222,7 @@
     "### Uploading files to kluster.ai\n",
     "\n",
     "#### The upload process\n",
-    "Now that we've prepared our batch files, we'll upload them to the <a href=\"https://platform.kluster.ai/\" target=\"_blank\">kluster.ai</a>  platform for batch inference. This step is crucial for:\n",
+    "Now that we've prepared our batch files, we'll upload them to the <a href=\"https://platform.kluster.ai/\" target=\"_blank\">kluster.ai platform</a> for batch inference. This step is crucial for:\n",
     "1. Getting our data to the models\n",
     "2. Setting up the processing queue\n",
     "3. Preparing for inference\n",
@@ -263,7 +263,7 @@
    "metadata": {},
    "source": [
     " This function provides real-time monitoring of batch job progress:\n",
-    " - Continuously checks job status via the kluster.ai API\n",
+    " - Continuously checks job status via the **kluster.ai** API\n",
     "- Displays current completion count (completed/total requests)\n",
     "- Updates status every 10 seconds until job is finished\n",
     "- Automatically clears previous output for clean progress tracking"
