--- a/tutorials/klusterai-api/sentiment-analysis-api.ipynb
+++ b/tutorials/klusterai-api/sentiment-analysis-api.ipynb
@@ -25,9 +25,9 @@
     "id": "6d1d06ea-79c1-4f28-b312-0e5aabe18ff3"
    },
    "source": [
-    "Welcome to the sentiment analysis notebook using the kluster.ai Batch API!\n",
+    "Welcome to the sentiment analysis notebook using the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API!\n",
     "\n",
-    "In this notebook, we’ll guide you through how to apply the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API to perform sentiment analysis on text data. For illustration, we’ll use a sample from the Amazon musical instrument reviews dataset to determine the sentiment of each review. You can easily customize this example to work with your own data and specific use case. This technique allows for efficient processing of datasets, whether small or large, with results neatly categorized using a cutting-edge language model.\n",
+    "In this notebook, we’ll guide you through how to apply the **kluster.ai** Batch API to perform sentiment analysis on text data. For illustration, we’ll use a sample from the Amazon musical instrument reviews dataset to determine the sentiment of each review. You can easily customize this example to work with your own data and specific use case. This technique allows for efficient processing of datasets, whether small or large, with results neatly categorized using a cutting-edge language model.\n",
     "\n",
     "To begin, just enter your API key and run the preloaded cells to perform the sentiment analysis. If you don’t have an API key, you can sign up for free <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">on our platform</a>."
    ]
@@ -47,7 +47,7 @@
    "id": "b8d580f8-67d5-45d6-915f-0f6b60d3b543",
    "metadata": {},
    "source": [
-    "Provide your unique kluster.ai API key (ensure there are no spaces). If you don’t have one yet, don’t forget to <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">sign up</a>."
+    "Provide your unique **kluster.ai** API key (ensure there are no spaces). If you don’t have one yet, don’t forget to <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">sign up</a>."
    ]
   },
   {
@@ -174,7 +174,7 @@
    "source": [
     "To run the inference job, we’ll follow three simple steps:\n",
     "1. **Create the batch input file -** we’ll create a file containing the requests to be processed by the model.\n",
-    "2. **Upload the batch input file to kluster.ai -** once the file is ready, we’ll upload it to the kluster.ai platform using the API, where it will be queued for processing.\n",
+    "2. **Upload the batch input file to kluster.ai -** once the file is ready, we’ll upload it to the **kluster.ai** platform using the API, where it will be queued for processing.\n",
     "3. **Start the job -** after the upload, we’ll trigger the job to process the data.\n",
     "\n",
     "Everything has already been set up for you—simply run the cells below and watch it work!"
@@ -288,7 +288,7 @@
    "id": "e48b2489-99bc-431b-8cb3-de816550d524",
    "metadata": {},
    "source": [
-    "With our input file ready, the next step is to upload it to the kluster.ai platform."
+    "With our input file ready, the next step is to upload it to the **kluster.ai** platform."
    ]
   },
   {
@@ -532,7 +532,7 @@
    "id": "7d195dd1-1293-4407-b6ad-cab7e77b14c0",
    "metadata": {},
    "source": [
-    "Congratulations on successfully completing the sentiment analysis task with the kluster.ai Batch API! This example demonstrates how simple it is to work with large datasets and derive meaningful insights from them. The Batch API enables you to scale your workflows seamlessly, making it a vital tool for handling large-scale data processing."
+    "Congratulations on successfully completing the sentiment analysis task with the **kluster.ai** Batch API! This example demonstrates how simple it is to work with large datasets and derive meaningful insights from them. The Batch API enables you to scale your workflows seamlessly, making it a vital tool for handling large-scale data processing."
    ]
   }
  ],
