--- a/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
+++ b/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
@@ -50,7 +50,7 @@
    "id": "0fd97579",
    "metadata": {},
    "source": [
-    "Enter your personal kluster.ai API key (make sure it has no blank spaces). Remember to <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">sign up</a> if you don't have one yet."
+    "Enter your personal **kluster.ai** API key (make sure it has no blank spaces). Remember to <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">sign up</a> if you don't have one yet."
    ]
   },
   {
@@ -389,7 +389,7 @@
     "\n",
     "To execute the request, we’ll follow three straightforward steps:\n",
     "1. Create the Batch input file - we’ll generate a file with the desired requests to be processed by the model.\n",
-    "2. Upload the Batch input file to kluster.ai - once the file is ready, we’ll upload it to the kluster.ai platform using the API, where it will be queued for processing.\n",
+    "2. Upload the Batch input file to **kluster.ai** - once the file is ready, we’ll upload it to the <a href=\"https://platform.kluster.ai/\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be queued for processing.\n",
     "3. Start the job - after the file is uploaded, we’ll initiate the job to process the uploaded data.\n",
     "\n",
     "Everything is set up for you – just run the cells below to watch it all come together!"
