update use of kluster.ai in notebooks

--- a/tutorials/klusterai-api/keyword-extraction-api.ipynb
+++ b/tutorials/klusterai-api/keyword-extraction-api.ipynb
@@ -25,9 +25,9 @@
     "id": "6d1d06ea-79c1-4f28-b312-0e5aabe18ff3"
    },
    "source": [
-    "Welcome to the keyword extraction notebook powered by the **kluster.ai** Batch API!\n",
+    "Welcome to the keyword extraction notebook powered by the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API!\n",
     "\n",
-    "In this notebook, we’ll demonstrate how to leverage the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API and the Llama 70B Large Language Model (LLM) to identify keywords in a given dataset. By using an extract from the AG News dataset as an example, we’ll show you how to extract keywords from the dataset. You can easily modify this example for your own use case and data format. Our solution efficiently processes text of any size, small text samples to enterprise-scale datasets.\n",
+    "In this notebook, we’ll demonstrate how to leverage the kluster.ai Batch API and the Llama 70B Large Language Model (LLM) to identify keywords in a given dataset. By using an extract from the AG News dataset as an example, we’ll show you how to extract keywords from the dataset. You can easily modify this example for your own use case and data format. Our solution efficiently processes text of any size, small text samples to enterprise-scale datasets.\n",
     "\n",
     "To get started, simply input your API key and execute the preloaded cells to perform the keyword extraction. If you don’t have an API key, you can register for free <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">on our platform</a>.\n",
     "\n",
@@ -49,7 +49,7 @@
    "id": "b8d580f8-67d5-45d6-915f-0f6b60d3b543",
    "metadata": {},
    "source": [
-    "Input your unique **kluster.ai** API key. If you haven’t obtained one yet, don’t forget to <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">sign up</a>."
+    "Input your unique kluster.ai API key. If you haven’t obtained one yet, don’t forget to <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">sign up</a>."
    ]
   },
   {
@@ -176,7 +176,7 @@
    "source": [
     "To run the inference job, we’ll follow three simple steps:\n",
     "1. **Create the batch input file -** we’ll create a file containing the requests to be processed by the model.\n",
-    "2. **Upload the batch input file to kluster.ai -** once the file is ready, we’ll upload it to the **kluster.ai** platform using the API, where it will be queued for processing.\n",
+    "2. **Upload the batch input file to kluster.ai -** once the file is ready, we’ll upload it to the kluster.ai platform using the API, where it will be queued for processing.\n",
     "3. **Start the job -** after the upload, we’ll trigger the job to process the data.\n",
     "\n",
     "Everything is preconfigured for you—just execute the cells below to see it all in action!"
@@ -290,7 +290,7 @@
    "id": "e48b2489-99bc-431b-8cb3-de816550d524",
    "metadata": {},
    "source": [
-    "Now that we’ve prepared our input file, it’s time to upload it to the **kluster.ai** platform."
+    "Now that we’ve prepared our input file, it’s time to upload it to the kluster.ai platform."
    ]
   },
   {
@@ -534,16 +534,8 @@
    "id": "7d195dd1-1293-4407-b6ad-cab7e77b14c0",
    "metadata": {},
    "source": [
-    "Congratulations! You’ve successfully completed the keyword extraction task using the **kluster.ai** Batch API. This demonstration highlights how you can effortlessly manage large datasets and extract meaningful insights from them. With the Batch API, you can scale your workflows smoothly, making it an essential tool for processing large-scale datasets."
+    "Congratulations! You’ve successfully completed the keyword extraction task using the kluster.ai Batch API. This demonstration highlights how you can effortlessly manage large datasets and extract meaningful insights from them. With the Batch API, you can scale your workflows smoothly, making it an essential tool for processing large-scale datasets."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c092343e-7672-46f4-aa27-00b3466ad210",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
