--- a/tutorials/klusterai-api/llm-as-a-judge.ipynb
+++ b/tutorials/klusterai-api/llm-as-a-judge.ipynb
@@ -23,7 +23,7 @@
    "id": "355a788f-a618-42a2-98c1-3d0e68ff766c",
    "metadata": {},
    "source": [
-    "In our previous <a href=\"https://github.com/kluster-ai/klusterai-cookbook/blob/main/examples/model-comparison.ipynb\" target=\"_blank\">notebook</a> we explored the idea of selecting the best model to perform a classification task. We did that by calculating the accuracy of each model based on a ground truth label. In real life applications, though, the ground truth is not always available and to create one we might depend on human anotation which is time-consuming and costly. \n",
+    "In our previous <a href=\"https://github.com/kluster-ai/klusterai-cookbook/blob/main/examples/model-comparison.ipynb\" target=\"_blank\">notebook</a>, we explored the idea of selecting the best model to perform a classification task. We did that by calculating the accuracy of each model based on a ground truth label. In real life applications, though, the ground truth is not always available and to create one we might depend on human anotation, which is time-consuming and costly. \n",
     "\n",
     "In this notebook, we will use the `Llama-3.1-8B-Instruct-Turbo` model to classify the genre of movies from the IMDb Top 1000 dataset based on their descriptions. To evaluate the accuracy of these predictions, we will use the `Llama-3.1-405B-Instruct-Turbo` model as a judge, tasked with determining whether the base model’s answers are correct. Since the dataset includes the true genres as ground truth, we can also assess how well the judge model aligns with the actual answers provided in the dataset."
    ]
@@ -50,11 +50,13 @@
     "## 1. Setting up your environment\n",
     "\n",
     "### API key configuration\n",
-    "To get started with this tutorial, you'll need a **kluster.ai** API key. If you don't have one yet, follow these steps:\n",
-    "1. Visit the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> to create an account.\n",
+    "\n",
+    "To get started with this tutorial, you'll need a <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> API key. If you don't have one yet, follow these steps:\n",
+    "\n",
+    "1. Visit the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> to create an account\n",
     "2. Generate your API key\n",
     "\n",
-    "Once you have your API key, we'll use it to authenticate our requests to the **kluster.ai** API.\n",
+    "Once you have your API key, we'll use it to authenticate our requests to the kluster.ai API.\n",
     "\n",
     "##### **Important note:** keep your API key secure and never share it publicly. In this notebook, we'll use Python's getpass module to safely input the key."
    ]
@@ -142,9 +144,11 @@
     "### Building our evaluation pipeline\n",
     "\n",
     "#### Understanding the helper functions\n",
+    "\n",
     "In this section, we'll create several utility functions that will help us:\n",
+    "\n",
     "1. Prepare our data for batch processing\n",
-    "2. Send requests to the **kluster.ai** API\n",
+    "2. Send requests to the kluster.ai API\n",
     "3. Monitor the progress of our evaluation\n",
     "4. Collect and analyze results\n",
     "\n",
@@ -263,7 +267,7 @@
    "metadata": {},
    "source": [
     " This function provides real-time monitoring of batch job progress:\n",
-    " - Continuously checks job status via the **kluster.ai** API\n",
+    " - Continuously checks job status via the kluster.ai API\n",
     "- Displays current completion count (completed/total requests)\n",
     "- Updates status every 10 seconds until job is finished\n",
     "- Automatically clears previous output for clean progress tracking"
@@ -326,7 +330,7 @@
     "### Collecting and processing results\n",
     "\n",
     "#### Understanding the format\n",
-    " The get_results() function below:\n",
+    " The `get_results()` function below:\n",
     " 1. Retrieves the completed batch job results\n",
     " 2. Extracts the model's response content from each result\n",
     " 3. Returns a list of all model responses\n",
