--- a/tutorials/klusterai-api/text-classification-api.ipynb
+++ b/tutorials/klusterai-api/text-classification-api.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "Welcome to the text classification notebook with the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API!\n",
     "\n",
-    "This notebook showcases how to use the **kluster.ai** Batch API to classify a data set based on a predefined set of categories. In our example, we use an extract from the IMDB top 1000 movies dataset and categorize them into one of “Action”, “Adventure”, “Comedy”, “Crime”, “Documentary”, “Drama”, “Fantasy”, “Horror”, “Romance”, or “Sci-Fi”. We are using a movies dataset but you can adapt this example by using your data and categories relevant for your use case. With this approach, you can effortlessly process datasets of any scale, from small collections to extensive datasets, and obtain categorized results powered by a state-of-the-art language model.\n",
+    "This notebook showcases how to use the kluster.ai Batch API to classify a data set based on a predefined set of categories. In our example, we use an extract from the IMDB top 1000 movies dataset and categorize them into one of “Action”, “Adventure”, “Comedy”, “Crime”, “Documentary”, “Drama”, “Fantasy”, “Horror”, “Romance”, or “Sci-Fi”. We are using a movies dataset but you can adapt this example by using your data and categories relevant for your use case. With this approach, you can effortlessly process datasets of any scale, from small collections to extensive datasets, and obtain categorized results powered by a state-of-the-art language model.\n",
     "\n",
     "Simply provide your API key and run the preloaded cells to perform the classification. If you don’t have an API key, you can sign up for free <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">on our platform</a>.\n",
     "\n",
@@ -49,7 +49,7 @@
    "id": "b8d580f8-67d5-45d6-915f-0f6b60d3b543",
    "metadata": {},
    "source": [
-    "Enter your personal **kluster.ai** API key (make sure it has no blank spaces). Remember to <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">sign up</a> if you don't have one yet."
+    "Enter your personal kluster.ai API key (make sure it has no blank spaces). Remember to <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">sign up</a> if you don't have one yet."
    ]
   },
   {
@@ -167,9 +167,9 @@
    },
    "source": [
     "To execute the inference job, we’ll follow three straightforward steps:\n",
-    "1. **Create the inference file -** we’ll generate a file with the desired requests to be processed by the model.\n",
-    "2. **Upload the inference file -** once the file is ready, we’ll upload it to the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be queued for processing.\n",
-    "3. **Start the job -** after the file is uploaded, we’ll initiate the job to process the uploaded data.\n",
+    "1. **Create the inference file -** we’ll generate a file with the desired requests to be processed by the model\n",
+    "2. **Upload the inference file -** once the file is ready, we’ll upload it to the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be queued for processing\n",
+    "3. **Start the job -** after the file is uploaded, we’ll initiate the job to process the uploaded data\n",
     "\n",
     "Everything is set up for you – just run the cells below to watch it all come together!"
    ]
@@ -282,7 +282,7 @@
    "id": "e48b2489-99bc-431b-8cb3-de816550d524",
    "metadata": {},
    "source": [
-    "Now that we’ve prepared our input file, it’s time to upload it to the **kluster.ai** platform."
+    "Now that we’ve prepared our input file, it’s time to upload it to the kluster.ai platform."
    ]
   },
   {
@@ -560,7 +560,7 @@
    "id": "7d195dd1-1293-4407-b6ad-cab7e77b14c0",
    "metadata": {},
    "source": [
-    "You’ve successfully completed the classification request using the **kluster.ai** Batch API! This process showcases how you can efficiently handle and classify large amounts of data with ease. The Batch API empowers you to scale your workflows seamlessly, making it an invaluable tool for processing extensive datasets."
+    "You’ve successfully completed the classification request using the kluster.ai Batch API! This process showcases how you can efficiently handle and classify large amounts of data with ease. The Batch API empowers you to scale your workflows seamlessly, making it an invaluable tool for processing extensive datasets."
    ]
   },
   {
