--- a/tutorials/klusterai-api/model-comparison.ipynb
+++ b/tutorials/klusterai-api/model-comparison.ipynb
@@ -638,7 +638,7 @@
     "### What we’ve learned\n",
     "1.\t**Model evaluation process** - how to systematically compare LLM performance, using accuracy as a key metric, and implementing batch inference for efficient evaluation.\n",
     "2.\t**Cost-performance balance** - larger models aren’t always significantly better; the importance of considering cost-effectiveness and making data-driven model selections.\n",
-    "3.\t**Practical implementations** - using the **kluster.ai** Batch API effectively, processing large datasets efficiently, and making informed decisions based on results.\n",
+    "3.\t**Practical implementations** - using the kluster.ai Batch API effectively, processing large datasets efficiently, and making informed decisions based on results.\n",
     "\n",
     "### Where to go from here\n",
     "1. **Apply to your use case** - adapt this approach to your specific needs, use your own labeled datasets, and customize evaluation metrics as needed.\n",
