update use of kluster.ai in notebooks (#38)
* update use of kluster.ai in notebooks

* fix

--- a/tutorials/klusterai-api/model-comparison.ipynb
+++ b/tutorials/klusterai-api/model-comparison.ipynb
@@ -29,7 +29,7 @@
     "In this hands-on tutorial, you'll learn how to systematically evaluate Language Models (LLMs) using the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API. We'll walk through a practical example of comparing different models for a real-world task.\n",
     "\n",
     "### Why this matters\n",
-    "Choosing the right LLM for your specific use case is crucial but can be challenging. While larger models might offer better performance, they often come with higher costs. **kluster.ai** provides high-performing models at competitive prices, making advanced AI more accessible.\n",
+    "Choosing the right LLM for your specific use case is crucial but can be challenging. While larger models might offer better performance, they often come with higher costs. kluster.ai provides high-performing models at competitive prices, making advanced AI more accessible.\n",
     "\n",
     "### What we will build\n",
     "Together, we'll create a systematic evaluation pipeline that:\n",
@@ -79,11 +79,11 @@
     "## Setting up your environment\n",
     "\n",
     "### API key configuration\n",
-    "To get started with this tutorial, you'll need a **kluster.ai** API key. If you don't have one yet, follow these steps:\n",
+    "To get started with this tutorial, you'll need a kluster.ai API key. If you don't have one yet, follow these steps:\n",
     "1. Visit the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> to create an account.\n",
     "2. Generate your API key\n",
     "\n",
-    "Once you have your API key, we'll use it to authenticate our requests to the **kluster.ai** API.\n",
+    "Once you have your API key, we'll use it to authenticate our requests to the kluster.ai API.\n",
     "\n",
     "### Important note\n",
     "Keep your API key secure and never share it publicly. In this notebook, we'll use Python's getpass module to safely input the key."
@@ -170,7 +170,7 @@
     "### Understanding the helper functions\n",
     "In this section, we'll create several utility functions that will help us:\n",
     "1. Prepare our data for batch processing\n",
-    "2. Send requests to the **kluster.ai** API\n",
+    "2. Send requests to the kluster.ai API\n",
     "3. Monitor the progress of our evaluation\n",
     "4. Collect and analyze results\n",
     "\n",
@@ -300,8 +300,9 @@
    "id": "b35d9a1d",
    "metadata": {},
    "source": [
-    " This function provides real-time monitoring of batch job progress:\n",
-    " - Continuously checks job status via the **kluster.ai** API\n",
+    "This function provides real-time monitoring of batch job progress:\n",
+    "\n",
+    "- Continuously checks job status via the kluster.ai API\n",
     "- Displays current completion count (completed/total requests)\n",
     "- Updates status every 10 seconds until job is finished\n",
     "- Automatically clears previous output for clean progress tracking"
@@ -364,7 +365,8 @@
     "### Collecting and processing results\n",
     "\n",
     "#### Understanding the format\n",
-    " The get_results() function below:\n",
+    "\n",
+    " The `get_results()` function below:\n",
     " 1. Retrieves the completed batch job results\n",
     " 2. Extracts the model's response content from each result\n",
     " 3. Returns a list of all model responses\n",
@@ -636,7 +638,7 @@
     "### What we’ve learned\n",
     "1.\t**Model evaluation process** - how to systematically compare LLM performance, using accuracy as a key metric, and implementing batch inference for efficient evaluation.\n",
     "2.\t**Cost-performance balance** - larger models aren’t always significantly better; the importance of considering cost-effectiveness and making data-driven model selections.\n",
-    "3.\t**Practical implementations** - using the **kluster.ai** Batch API effectively, processing large datasets efficiently, and making informed decisions based on results.\n",
+    "3.\t**Practical implementations** - using the kluster.ai Batch API effectively, processing large datasets efficiently, and making informed decisions based on results.\n",
     "\n",
     "### Where to go from here\n",
     "1. **Apply to your use case** - adapt this approach to your specific needs, use your own labeled datasets, and customize evaluation metrics as needed.\n",
