--- a/tutorials/klusterai-api/llm-as-a-judge.ipynb
+++ b/tutorials/klusterai-api/llm-as-a-judge.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "Once you have your API key, we'll use it to authenticate our requests to the kluster.ai API.\n",
     "\n",
-    "##### **Important note:** keep your API key secure and never share it publicly. In this notebook, we'll use Python's getpass module to safely input the key."
+    "**Important note:** keep your API key secure and never share it publicly. In this notebook, we'll use Python's getpass module to safely input the key."
    ]
   },
   {
